I made updates to the code

--- a/Overvievfolder/CafeLunaOOverviev.html
+++ b/Overvievfolder/CafeLunaOOverviev.html
@@ -7,10 +7,14 @@
 </head>
 <body style="background-color:rgb(193, 83,0 ) ;">
     <h1 style="text-align: center;">CafeLuna-ya Xoş gəlmisiniz!</h1>
+    <h2 style="text-align: center;">Cafe Luna – rahat atmosferi, keyfiyyətli qəhvələri və ləzzətli desertləri ilə günün istənilən vaxtı dincəlmək üçün ideal məkandır.</h2>
+    <img src="../Overvievfolder/images overview/degirmen-cafe.jpg" alt="CafeLuna" width="1500" height="800">
+    <h2 style="text-align: center;">Cafe Luna 2023-cü ildən etibarən qonaqlarına yüksək keyfiyyətli espresso əsaslı qəhvələr, ev üsulu desertlər və isti, rahat mühit təqdim edir. Burada həm dostlarınla vaxt keçirə, həm də sakit şəkildə qəhvədən zövq ala bilərsən.</h2>
+    <img src="images overview/cafe-coffee-design-tasty.jpg" alt="CafeLuna" width="1500">
+    <h2 style="text-align: center;">Cafe Luna isti işıqlandırması, sakit musiqisi və rahat oturma zonaları iləqonaqlarına ev rahatlığı hissi yaşadır.</h2>
     <h3>İş saatları : Həftə içi : 09:00 - 22:00 |
-        Həftə sonu : 09:00 - 00:00
-    </h3>
-    
-    
+        Həftə sonu : 09:00 - 00:00</h3>
+    <a href="../menyuFolder/Menyu.html">CafeLuna's Menu</a>
+    <a href=""><footer style="text-align: center;">© 2026 Cafe Luna</footer></a>
 </body>
 </html>
