I added aboutPage for CafeLuna

--- a/overviewFolder/Overviev.html
+++ b/overviewFolder/Overviev.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CafeLuna</title>
-    <link rel="icon" href="../Overvievfolder\images overview\Baked_cheesecake_with_raspberries_and_blueberries.jpg">
+    <link rel="icon" href="../menyuFolder/images/Baked_cheesecake_with_raspberries_and_blueberries.jpg">
 </head>
-<body style="background-color: #9c6644 ;">
+<body style="background-color: #866ea2 ;">
     <h1 style="text-align: center;">CafeLuna-ya Xoş gəlmisiniz!</h1>
     <h2 style="text-align: center;">Cafe Luna – rahat atmosferi, keyfiyyətli qəhvələri və ləzzətli desertləri ilə günün istənilən vaxtı dincəlmək üçün ideal məkandır.</h2>
-    <img src="../Overvievfolder/images overview/61IHLDjNYoL._AC_UF1000,1000_QL80_.jpg" alt="CafeLuna" width="1500" height="1000">
+    <img src="../overviewFolder/images overview/61IHLDjNYoL._AC_UF1000,1000_QL80_.jpg" alt="CafeLuna" width="800" height="450">
     <h2 style="text-align: center;">Cafe Luna 2023-cü ildən etibarən qonaqlarına yüksək keyfiyyətli espresso əsaslı qəhvələr, ev üsulu desertlər və isti, rahat mühit təqdim edir. Burada həm dostlarınla vaxt keçirə, həm də sakit şəkildə qəhvədən zövq ala bilərsən.</h2>
-    <img src="images overview/cafe-coffee-design-tasty.jpg" alt="CafeLuna" width="1500">
+    <img style="align-items: center; justify-items: center;" src="images overview/cafe-coffee-design-tasty.jpg" alt="CafeLuna" width="800">
     <h2 style="text-align: center;">Cafe Luna isti işıqlandırması, sakit musiqisi və rahat oturma zonaları iləqonaqlarına ev rahatlığı hissi yaşadır.</h2>
-    <h3>İş saatları : Həftə içi : 09:00 - 22:00 |
-        Həftə sonu : 09:00 - 00:00</h3>
     <a href="../menyuFolder/Menyu.html">CafeLuna's Menu</a>
-    <a href=""><footer style="text-align: center;">© 2026 Cafe Luna</footer></a>
+    <br>
+    <a href="../aboutFolder/aboutPage.html">Haqqımızda</a>
+    <footer style="text-align: center;">© 2026 Cafe Luna</footer>
 </body>
 </html>
